Don't call SpreadsheetView::showComments() when showing spreadsheet properties in the dock.

BUG: 394025
FIXED-IN: 2.5